--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,145 +1,259 @@
-/*  .container-general {
-  width: 100vw;
-  margin: 0;
- }
- .header {
-  height: 15vh;
-display: flex;
-  background-color: #05C9D5;  
-}
-.div-logo {
-  width: 55%;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.div-logo img {
-width: 10vw;
-height: 15vh;
-border-radius: 10px;
-
-}
-.cuenta-user {
-  width: 45%;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  margin-right: 10px;
-}
-.cuenta-user a {
-margin-right: 10px;
-text-decoration: none;
-color: black;
-font-size: 0.7rem;
-}
-
-
-
-.container-gral-navBar{
-  display: flex;
-  justify-content: space-between;
-}
-
-.link{
-  display: flex;
- 
-  padding: 5px;
-}
-
-.link a {
-  margin: 10px;
-  text-decoration: none;
-color: black;
-font-size: 0.7rem;
-}
-
-.search {
-  display: flex;
-  padding: 5px;
-  margin-right: 20px;
-}
-.search a {
-  margin-right: 10px;
-  text-decoration: none;
-color: black;
-font-size: 0.7rem;
-} */
-/*
-.user-container {
-  display: flex;
-  align-items: center;
-}
-
-.account-link {
-  text-decoration: none;
-  font-size: 0.7rem;
-  color: black;
-  margin-right: 10px; /* Ajusta el margen derecho según tus preferencias 
-}
-
-.user-icon {
-  font-size: 1.5rem; /* Ajusta el tamaño del ícono según tus preferencias 
-}
-*/
-.heder{
+/*div contenedor general de la navbar*/
+.header {
   display: flex;
   flex-direction: column;
-  align-items: end;
+  align-items: flex-end;
   width: 100vw;
-  background-color: cadetblue;
+  background-color: #05C9D5;
+  position: relative;
+  position: static;
 }
 
-.logo-cuenta{
+/*div contenedor del span*/
+.nav_toggle {
+  display: none;
+}
+
+/*div contenedor header*/
+.logo-cuenta {
   width: 55vw;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   padding: 0;
-  padding-right: 2rem;
+
 }
 
-.logo-cuenta img{
+/*imagen logo header*/
+.logo-cuenta img {
   width: 10vw;
+  border-radius: 10px;
 }
-nav{
+
+/*div contenedor enlace cuenta*/
+.cuenta {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/*enlace cuenta*/
+.cuenta a {
+  padding: 10px;
+  font-size: 0.9rem;
+  text-decoration: none;
+  color: black;
+  font-family: 'Inria Serif', serif;
+}
+
+/*label nav*/
+nav {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  background-color: wheat;
+  justify-content: flex-start;
+  border-bottom: solid black 0.5px;
+  border-top: solid black 0.5px;
+  background-color: white;
   width: 100vw;
   color: black;
 }
-.primera{
+
+/*div contenedor primera parte de la nav*/
+.primera {
   display: flex;
-  flex-wrap: wrap;
-  width: 70vw;
-}
-.segunda{
-  display: flex;
-  justify-content:flex-end;
-  width: 30vw;
+  justify-content: space-around;
+  width: 50vw;
 }
 
-.primera a{
-  margin: 0;
+/*div contenedor segunda parte de la nav*/
+.segunda {
+  display: flex;
+  justify-content: flex-end;
+  width: 50vw;
+}
+
+/*enlace de la primera parte de la nav*/
+.primera a {
+  font-family: 'Inria Serif', serif;
+  text-align: center;
+  font-size: 0.9rem;
   padding: 0.5rem;
-  border: 1px solid black;
-  text-align: center;
-  font-size: 0.7rem;
-  flex: 1;
+  text-decoration: none;
+  color: black;
+
 }
 
-.segunda a{
+/*enlace de la segunda parte de la nav*/
+.segunda a {
   margin: 0;
-  border: 1px solid black;
   text-align: center;
-  font-size: 0.7rem;
+  font-size: 0.9rem;
+  padding: 0.5rem;
+  text-decoration: none;
+  color: black;
+  font-family: 'Inria Serif', serif;
 }
 
+/*icono user*/
 .icon {
   margin-right: 20px;
+  font-size: 1.5rem;
+  padding: 0.2rem;
 
 }
 
+/*contenedor tercera parte de la navbar*/
+.tercera {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  background-color: white;
+  width: 100vw;
+  border-bottom: solid black 0.5px;
+
+}
+
+/*enlace tercera parte navbar*/
+.tercera a {
+  font-size: 0.9rem;
+  text-decoration: none;
+  color: black;
+}
+
+/*media query aplicada a partir de 600px*/
+@media (max-width: 600px) {
+  .cuenta a {
+    font-size: 0.6rem;
+  }
+
+  .icon {
+    font-size: 0.9rem;
+  }
+
+  .primera,
+  .segunda,
+  .tercera {
+    width: 100%;
+  }
+
+  .primera a {
+    margin-left: 5px;
+    font-size: 0.6rem;
+    padding: 0.3rem;
+  }
+
+  .segunda a {
+    font-size: 0.6rem;
+  }
+
+  .tercera a {
+    margin-right: 10px;
+    font-size: 0.6rem;
+    margin: 0;
+    padding: 5px;
+  }
+}
+
+/*media query aplicada a partir de 360px para menú hamburguesa*/
+@media (max-width: 360px) {
+
+  .logo-cuenta {
+    position: relative;
+    left: 0;
+    width: 100vw;
+    height: -webkit-fill-available;
+    width: 100vw;
+    justify-content: space-between;
+
+  }
+
+  .logo-cuenta img {
+    width: 20vw;
+
+  }
+
+  .segunda {
+    display: none;
+  }
+
+  .header-nav.visible,
+  .primera.visible,
+  .segunda.visible,
+  .tercera.visible {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    background-color: #05C9D5;
+    transform: translate(-100%);
+  }
+
+  .primera,
+  .tercera {
+    display: flex !important;
+    flex-direction: column;
+    width: 100vw;
+    background-color: #05C9D5;
+
+  }
+
+  .primera a {
+    text-align: left;
+    margin: 0;
+    font-size: 0.7rem;
+    font-style: bold;
+  }
+
+  .talleres {
+    display: none;
+  }
+
+  .tercera a {
+    font-size: 0.7rem;
+    font-style: bold;
+  }
+
+  .tercera {
+    border: none;
+  }
+
+  nav {
+    border-bottom: none;
+  }
+
+  .nav_toggle {
+    display: flex !important;
+    flex-direction: column;
+    margin: 15px;
+    width: 12vw;
+  }
+
+  .nav_toggle span {
+    width: 30px;
+    height: 3px;
+    background: black;
+    margin-bottom: 5px;
+    border-radius: 2px;
+    transform-origin: 5px 0px;
+    transition: all 0.2s linear;
+
+  }
+  .nav_toggle.open > span{
+    transform: rotate(45deg) translate(0px, 0px);
+  }
+  .nav_toggle.open > span:nth-child(2){
+    display: none;
+  }
+  .nav_toggle.open > span:nth-child(3){
+    transform: rotate(-45deg) translate(-5px, 1px);
+  }
+ 
+  
+  
+  
+
+
+  .icon {
+    margin-right: 5px;
+  }
+}
