--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,13 @@
+
 body{
     margin: 0;
     width: 100vw;
     display: flex;
     flex-direction: column;
     padding: 0;
+    font-family: 'Inria Serif', serif;
+    
+ 
 }
 
 #root {
