--- a/src/components/Carrusel/Carrusel.css
+++ b/src/components/Carrusel/Carrusel.css
@@ -1,25 +1,35 @@
-/* .carrusel{
+.carrusel{
     display: flex;
-    border: solid 5px black;
     width: 80vw;
-    height: 150vh; 
-} */
+    height: auto; 
+    position: relative;
+    z-index: 1;
+} 
 
-.img-carousel{
- margin-top: 20vh;  
-     display: flex;
-   flex-wrap: wrap;
-   width: 80vw;
-  height: 100vh;
-  overflow: hidden;
-      
- } 
+.img-carousel {
+    margin-top: 20vh;
+    display: flex;
+    flex-wrap: wrap;
+    width: 80vw;
+    height: 100vh;
+    overflow: hidden;
 
- 
- .img-carousel img{
-     justify-content: center;
-     width: 100vw;
-     height: 100vh;
-     object-fit: cover;
- }
+}
 
+
+.img-carousel img {
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+}
+
+@media(max-width:600px){
+    .img-carousel{
+        height: 80vh;
+    }
+    .img-carousel{
+        height: 80vh;
+
+    }
+}
