--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,7 +3,8 @@
    justify-content: center;
   align-content: center;
   width: 100vw;
-    height: 100vh;
+    height: auto;
+    background-color: #9d8777c2;
   
    
 }
