--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 
 body{
-    margin: 0;
-    width: 100vw;
+    
+    max-width: 100vw;
     display: flex;
     flex-direction: column;
     padding: 0;
@@ -11,6 +11,6 @@ body{
 }
 
 #root {
-    max-width: 1280px;
+    max-width: 100vw;
     margin: 0;
   }
